feat: add notification service